<?xml version="1.0"?>
<package format="2">
  <name>airhockey_pkg</name>
  <version>0.1.0</version>
  <description>The airhockey_pkg package</description>

  <maintainer email="camilo90@hotmail.es">Camilo</maintainer>

  <license>BSD</license>

  <author email="camilo90@hotmail.es">Camilo</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>


  <export>

  </export>
</package>
